2015-09-16 Ben Shi <powerstudio1st AT 163 DOT com>

	* src/SDCC.y:
	* src/SDCCast.c:
	* src/SDCCerr.c:
	* src/SDCCicode.c:
	  Disable nested critical block / function call, support return in inline critical functions.
	* support/regression/tests/critical.c:
	  Improve test case.
	* support/regression/tests/malloc.c:
	  fix a small spot.

2015-09-15 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/malloc.c:
	  More testing of memory management.

2015-09-14 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/malloc.c:
	  More testing of memory management.

2015-09-13 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/pic16/*
	  Fix delarations to make pic16 lib compile again.

2015-09-12 Philipp Klaus Krause <pkk AT spth.de>

	* src/pic14/genarith.c:
	  Fix bug #2417 by applying patch by Juho Salminen.

2015-09-10 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/bug-2385.c:
	  Regression test for bug #2385.

2015-09-10 Ben Shi <powerstudio1st AT 163 DOT com>

	* support/regression/tests/critical.c:
	  Improve test case.
	* src/SDCC.y:
	  Fix a bug: inline critical functions are inlined as non-critical.

2015-09-09 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/generic.c:
	  More testcases for _Generic.
	* src/z80/gen.c,
	  support/regression/tests/critical.c:
	  Fix bug #2416.

2015-09-04 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/peep.c:
	  Fix handling of bcpl in notUsed().

2015-09-03 Philipp Klaus Krause <pkk AT spth.de>

	* src/pic14/peeph.def:
	  Fix bug #2415.
	* src/stm8/peeph.def:
	  Implement some rules for bit complement.
	* src/SDCCval.c,
	  support/regression/tests/generic.c:
	  Fix bug #2411.
	* src/pic16/main.c:
	  Use zero-initializing crt0 by default.

2015-08-27 Ben Shi <powerstudio1st AT 163 DOT com>

	* sim/ucsim/packages_in.mk:
	  Fix a bug: simulator sz80 is not built if only z80 port is enabled.

2015-08-22 Ben Shi <powerstudio1st AT 163 DOT com>
