@@ -1,3 +1,10 @@
+2015-09-20 Ben Shi <powerstudio1st AT 163 DOT com>
+
+	* src/z80/gen.c:
+	  Fix bugs in genOr() and genXor() while operands are longlong.
+	* support/regression/tests/longlong.c:
+	  Enable more tests.
+
 2015-09-16 Ben Shi <powerstudio1st AT 163 DOT com>
 
 	* src/SDCC.y:
